fix spacing in firefox

--- a/frontend/src/app/components/chat/chat.component.css
+++ b/frontend/src/app/components/chat/chat.component.css
@@ -1,6 +1,6 @@
 #chat_parent {
   border: 1px solid black;
-  height: 65vh;
+  height: 61vh;
   min-width: 30vw;
   max-width: 100%;
   overflow: scroll;
