--- a/frontend/src/app/components/game/game.component.css
+++ b/frontend/src/app/components/game/game.component.css
@@ -1,7 +1,7 @@
 #board {
   display: table;
   max-width: 100vw;
-  max-height: 86vh;
+  max-height: 84vh;
   aspect-ratio: 1;
   font-size: 0px;
   display: block;
